--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.22.0)
 
 set(PROJECT_NAME ecs)
-set(SOURCES src/main.cpp)
+set(SOURCES src/main.cpp src/Entity.cpp src/Component.cpp src/TransformComponent.cpp)
 
 project(${PROJECT_NAME} LANGUAGES CXX)
 
