--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.22.0)
 
 set(PROJECT_NAME ecs)
-set(SOURCES src/main.cpp src/Entity.cpp src/Component.cpp src/TransformComponent.cpp)
+set(SOURCES src/main.cpp)
 
 project(${PROJECT_NAME} LANGUAGES CXX)
+
 
 
 add_executable(${PROJECT_NAME} ${SOURCES})
